--- a/components/Pages/addproduct.html
+++ b/components/Pages/addproduct.html
@@ -40,12 +40,13 @@
       <div class="container">
         <div class="md text-center my-2">Add a Product Page</div>
         <div class="container flex-center">
-
             <section class="cloud bg-primary my-2 py-2">
+              <h4 class="text-center">Insert an Image</h2>
                 <div class="container grid">
                   <div class="text-center">
+                 
                   </div>
-                  <label for="myfile">Insert an  Image</label>
+                 <br>
                     <input type="file" id="myfile" name="myfile">
                   <img src="#" alt="Add image" />
                 </div>
@@ -57,6 +58,8 @@
                 <input type="description" placeholder="Description" required />  
                 <input type="text" placeholder="Aisle" required />  
                 <input type="price" placeholder=" $ Price"  required />  
+                <br>
+                <p>Input the Inventory Units</p>
                 <input type="number" min="0" max="100" value="1" />
                     </div>
               </section>
