--- a/components/bs.html
+++ b/components/bs.html
@@ -1,61 +1,10 @@
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="cart.css">
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="cart.css" />
+  </head>
+  <body></body>
 </html>
-<div class="card">
-    <div class="row">
-        <div class="col-md-8 cart">
-            <div class="title">
-                <div class="row">
-                    <div class="col">
-                        <h4><b>online grocery cart </b></h4>
-                    </div>
-                    <div class="col align-self-center text-right text-muted">beverages</div>
-                </div>
-            </div>
-            <div class="row border-top border-bottom">
-                <div class="row main align-items-center">
-                    <div class="col-2"><img class="img-fluid" src="images2/pexels-timur-weber-8679183.jpg"></div>
-                    <div class="col">
-                        <div class="row text-muted">watermelon </div>
-                        <div class="row">juice</div>
-                    </div>
-                    
-                   <button> <div class="col">&dollar;7.00 <span class="close"></span></div></button>
-                </div>
-            </div>
-            <div class="row border-top border-bottom">
-                <div class="row main align-items-center">
-                    <div class="col-2"><img class="img-fluid" src="images2/ginger ale.jpg"></div>
-                    <div class="col">
-                        <div class="row text-muted">Ginger ale </div>
-                        <div class="row">in canada dry and schweppes</div>
-                    </div>
-                    <button> <div class="col">&dollar;3.00 <span class="close"></span></div></button>
-                </div>
-            
-                <hr>
-                <div class="row">
-                    <div class="col" style="padding-left:0;">ITEMS 2</div>
-                    <div class="col text-right">&dollar; 10.00</div>
-                </div>
-                <form>
-                    <p>SHIPPING</p> <select>
-                        <option class="text-muted">Standard-Delivery- &dollar;5.00</option>
-                    </select>
-                    
-                <div class="row" style="border-top: 1px solid rgba(0,0,0,.1); padding: 2vh 0;">
-                    <div class="col">TOTAL PRICE</div>
-                    <div class="col text-right">&dollar;; 15.00</div>
-                </div> <button class="btn">CHECKOUT</button>
-            </div>
-        </div>
-    </div>
