--- a/components/Pages/aisles/aisles.html
+++ b/components/Pages/aisles/aisles.html
@@ -24,15 +24,17 @@
         <h1 class="logo">Al-Sham</h1>
         <nav>
           <ul>
-            <li><a href="home.html">Home</a></li>
+            <li><a href="/components/Pages/home.html">Home</a></li>
             <li>
-              <a href="aisles/aisles.html">Aisles</a>
+              <a href="/components/Pages/aisles/aisles.html">Aisles</a>
             </li>
 
-            <li><a href="login.html">User login</a></li>
-            <li><a href="admin.html">Admin</a></li>
-            <li><a href="createAccount.html">Create account</a></li>
-            <li><a href="cart.html">Cart</a></li>
+            <li><a href="/components/Pages/login.html">User login</a></li>
+            <li><a href="/components/Pages/admin.html">Admin</a></li>
+            <li>
+              <a href="/components/Pages/createAccount.html">Create account</a>
+            </li>
+            <li><a href="/components/Pages/cart.html">Cart</a></li>
           </ul>
         </nav>
       </div>
@@ -45,12 +47,14 @@
       <div class="container">
         <div class="md text-center my-2">Shop by our sections</div>
         <div class="container flex">
-          <div class="card btn">
-            <h4>Meat</h4>
-            <i class="fas fa-drumstick-bite"></i>
-          </div>
+          <a href="aisles/meat.html">
+            <div class="card btn">
+              <h4>Meat</h4>
+              <i class="fas fa-drumstick-bite"></i>
+            </div>
+          </a>
 
-          <a href="aisles/fruitsAndVegetables.html">
+          <a href="/components/Pages/aisles/fruitsAndVegetables.html">
             <div class="card btn">
               <h4>Fruits and Vegetables</h4>
               <i class="fas fa-apple-alt"></i>
@@ -58,32 +62,40 @@
             </div>
           </a>
 
-          <a href="">
+          <a href="/components/Pages/aisles/bread.html">
             <div class="card btn">
               <h4>Bread</h4>
               <i class="fas fa-bread-slice"></i>
             </div>
           </a>
 
-          <div class="card btn">
-            <h4>Eggs and Dairy</h4>
-            <i class="fas fa-egg"></i>
-          </div>
+          <a href="/components/Pages/aisles/eggsAndDairy.html">
+            <div class="card btn">
+              <h4>Eggs and Dairy</h4>
+              <i class="fas fa-egg"></i>
+            </div>
+          </a>
 
-          <div class="card btn">
-            <h4>Fish</h4>
-            <i class="fas fa-fish"></i>
-          </div>
+          <a href="/components/Pages/aisles/fish.html">
+            <div class="card btn">
+              <h4>Fish</h4>
+              <i class="fas fa-fish"></i>
+            </div>
+          </a>
 
-          <div class="card btn">
-            <h4>Snacks</h4>
-            <i class="fas fa-candy-cane"></i>
-          </div>
+          <a href="/components/Pages/aisles/Snacks.html">
+            <div class="card btn">
+              <h4>Snacks</h4>
+              <i class="fas fa-candy-cane"></i>
+            </div>
+          </a>
 
-          <div class="card btn">
-            <h4>Drinks</h4>
-            <i class="fas fa-cocktail"></i>
-          </div>
+          <a href="/components/Pages/aisles/beverages2.html">
+            <div class="card btn">
+              <h4>Beverages</h4>
+              <i class="fas fa-cocktail"></i>
+            </div>
+          </a>
         </div>
       </div>
     </section>
