--- a/components/Pages/aisles/beverages2.html
+++ b/components/Pages/aisles/beverages2.html
@@ -24,12 +24,17 @@
         <h1 class="logo">Al-Sham</h1>
         <nav>
           <ul>
-            <li><a href="home.html">Home</a></li>
-            <li><a href="aisles/aisles.html">Aisles</a></li>
-            <li><a href="login.html">Login</a></li>
-            <li><a href="createAccount.html">Create Account</a></li>
-            <li><a href="admin.html">Admin</a></li>
-            <li><a href="cart.html">Cart</a></li>
+            <li><a href="/components/Pages/home.html">Home</a></li>
+            <li>
+              <a href="/components/Pages/aisles/aisles.html">Aisles</a>
+            </li>
+
+            <li><a href="/components/Pages/login.html">User login</a></li>
+            <li><a href="/components/Pages/admin.html">Admin</a></li>
+            <li>
+              <a href="/components/Pages/createAccount.html">Create account</a>
+            </li>
+            <li><a href="/components/Pages/cart.html">Cart</a></li>
           </ul>
         </nav>
       </div>
@@ -50,8 +55,10 @@
           />
           <h3>Ginger Ale</h3>
           <div class="price">$1.99 <span>tax not included</span></div>
-          <li>Ginger ale is made from actual Ginger</li>
-          <li>its main brands are Schweppes and Canada Dry</li>
+          <details>
+            <li>Ginger ale is made from actual Ginger</li>
+            <li>its main brands are Schweppes and Canada Dry</li>
+          </details>
           <div class="quantity">
             <span>Quantity: </span>
             <input type="number" min="1" max="100" value="1" />
@@ -64,8 +71,10 @@
           <img src="../../../images/bevImages/tea.jpg" alt="Tea" />
           <h3>Tea</h3>
           <div class="price">$3.99 <span>tax not included</span></div>
-          <li>Tea is one of the most popular drinks</li>
-          <li>there are many types of teas:green tea,early gray</li>
+          <details>
+            <li>Tea is one of the most popular drinks</li>
+            <li>there are many types of teas:green tea,early gray</li>
+          </details>
           <div class="quantity">
             <span>Quantity: </span>
             <input type="number" min="1" max="100" value="1" />
@@ -78,8 +87,10 @@
           <img src="../../../images/bevImages/cola.jpg" alt="Cola" />
           <h3>Cola</h3>
           <div class="price">$2.99 <span>tax not included</span></div>
-          <li>Cola is the most popular soft drink in the grocery aisle</li>
-          <li>It has a great lasting taste</li>
+          <details>
+            <li>Cola is the most popular soft drink in the grocery aisle</li>
+            <li>It has a great lasting taste</li>
+          </details>
           <div class="quantity">
             <span>Quantity: </span>
             <input type="number" min="1" max="100" value="1" />
@@ -95,8 +106,10 @@
           />
           <h3>Coffee</h3>
           <div class="price">$5.99 <span>tax not included</span></div>
-          <li>100% Arabic Coffee</li>
-          <li>Pure and Natural Coffee</li>
+          <details>
+            <li>100% Arabic Coffee</li>
+            <li>Pure and Natural Coffee</li>
+          </details>
           <div class="quantity">
             <span>Quantity: </span>
             <input type="number" min="1" max="100" value="1" />
@@ -112,8 +125,10 @@
           />
           <h3>WaterMelon Juice</h3>
           <div class="price">$0.99 <span>tax not included</span></div>
-          <li>watermelon juice is made from watermelon</li>
-          <li>its fresh and natural no added sugar</li>
+          <details>
+            <li>watermelon juice is made from watermelon</li>
+            <li>its fresh and natural no added sugar</li>
+          </details>
           <div class="quantity">
             <span>Quantity: </span>
             <input type="number" min="1" max="100" value="1" />
@@ -128,8 +143,10 @@
           />
           <h3>Lemonade Juice</h3>
           <div class="price">$0.99 <span>tax not included</span></div>
-          <li>lemonade is from actual lemonds</li>
-          <li>lemoande is fresh and natural and naturally squeezed</li>
+          <details>
+            <li>lemonade is from actual lemonds</li>
+            <li>lemoande is fresh and natural and naturally squeezed</li>
+          </details>
           <div class="quantity">
             <span>Quantity: </span>
             <input type="number" min="1" max="100" value="1" />
