--- a/components/Pages/aisles/bread.html
+++ b/components/Pages/aisles/bread.html
@@ -24,12 +24,17 @@
         <h1 class="logo">Al-Sham</h1>
         <nav>
           <ul>
-            <li><a href="home.html">Home</a></li>
-            <li><a href="aisles/aisles.html">Aisles</a></li>
-            <li><a href="login.html">Login</a></li>
-            <li><a href="createAccount.html">Create Account</a></li>
-            <li><a href="admin.html">Admin</a></li>
-            <li><a href="cart.html">Cart</a></li>
+            <li><a href="/components/Pages/home.html">Home</a></li>
+            <li>
+              <a href="/components/Pages/aisles/aisles.html">Aisles</a>
+            </li>
+
+            <li><a href="/components/Pages/login.html">User login</a></li>
+            <li><a href="/components/Pages/admin.html">Admin</a></li>
+            <li>
+              <a href="/components/Pages/createAccount.html">Create account</a>
+            </li>
+            <li><a href="/components/Pages/cart.html">Cart</a></li>
           </ul>
         </nav>
       </div>
@@ -50,11 +55,13 @@
           />
           <h3>Whole Wheat Round Bread</h3>
           <div class="price">$29.99 <span>tax not included</span></div>
-          <li>Calories: 80</li>
-          <li>Protein: 4 grams</li>
-          <li>Fat: 0.5</li>
-          <li>Carbs: 15 grams</li>
-          <li>Fiber: 3 grams</li>
+          <details>
+            <li>Calories: 80</li>
+            <li>Protein: 4 grams</li>
+            <li>Fat: 0.5</li>
+            <li>Carbs: 15 grams</li>
+            <li>Fiber: 3 grams</li>
+          </details>
           <div class="quantity">
             <span>Quantity: </span>
             <input type="number" min="1" max="100" value="1" />
@@ -70,11 +77,13 @@
           />
           <h3>Crepe Bread</h3>
           <div class="price">$2.99 <span>tax not included</span></div>
-          <li>Calories: 100</li>
-          <li>Protein: 2 grams</li>
-          <li>Fat: 3.5</li>
-          <li>Carbs: 20 grams</li>
-          <li>Fiber: 3 grams</li>
+          <details>
+            <li>Calories: 100</li>
+            <li>Protein: 2 grams</li>
+            <li>Fat: 3.5</li>
+            <li>Carbs: 20 grams</li>
+            <li>Fiber: 3 grams</li>
+          </details>
           <div class="quantity">
             <span>Quantity: </span>
             <input type="number" min="1" max="100" value="1" />
@@ -87,11 +96,13 @@
           <img src="../../../images/breadImages/toast.jpg" alt="Toast Bread" />
           <h3>Toast Bread</h3>
           <div class="price">$4.99 <span>tax not included</span></div>
-          <li>Calories: 30</li>
-          <li>Protein: 8 grams</li>
-          <li>Fat: 0.1</li>
-          <li>Carbs: 5 grams</li>
-          <li>Fiber: 3 grams</li>
+          <details>
+            <li>Calories: 30</li>
+            <li>Protein: 8 grams</li>
+            <li>Fat: 0.1</li>
+            <li>Carbs: 5 grams</li>
+            <li>Fiber: 3 grams</li>
+          </details>
           <div class="quantity">
             <span>Quantity: </span>
             <input type="number" min="1" max="100" value="1" />
@@ -107,11 +118,13 @@
           />
           <h3>Whole Wheat Bread with Nuts</h3>
           <div class="price">$15.99 <span>tax not included</span></div>
-          <li>Calories: 20</li>
-          <li>Protein: 2 grams</li>
-          <li>Fat: 0.5</li>
-          <li>Carbs: 1 grams</li>
-          <li>Fiber: 10 grams</li>
+          <details>
+            <li>Calories: 20</li>
+            <li>Protein: 2 grams</li>
+            <li>Fat: 0.5</li>
+            <li>Carbs: 1 grams</li>
+            <li>Fiber: 10 grams</li>
+          </details>
           <div class="quantity">
             <span>Quantity: </span>
             <input type="number" min="1" max="100" value="1" />
@@ -127,11 +140,13 @@
           />
           <h3>Round Bread</h3>
           <div class="price">$4.99 <span>tax not included</span></div>
-          <li>Calories: 30</li>
-          <li>Protein: 10 grams</li>
-          <li>Fat: 2.5</li>
-          <li>Carbs: 23 grams</li>
-          <li>Fiber: 9 grams</li>
+          <details>
+            <li>Calories: 30</li>
+            <li>Protein: 10 grams</li>
+            <li>Fat: 2.5</li>
+            <li>Carbs: 23 grams</li>
+            <li>Fiber: 9 grams</li>
+          </details>
           <div class="quantity">
             <span>Quantity: </span>
             <input type="number" min="1" max="100" value="1" />
@@ -146,11 +161,13 @@
           />
           <h3>Whole Round Bread with Wheat</h3>
           <div class="price">$16.99 <span>tax not included</span></div>
-          <li>Calories: 50</li>
-          <li>Protein: 17 grams</li>
-          <li>Fat: 4.5</li>
-          <li>Carbs: 12.5 grams</li>
-          <li>Fiber: 3.99 grams</li>
+          <details>
+            <li>Calories: 50</li>
+            <li>Protein: 17 grams</li>
+            <li>Fat: 4.5</li>
+            <li>Carbs: 12.5 grams</li>
+            <li>Fiber: 3.99 grams</li>
+          </details>
           <div class="quantity">
             <span>Quantity: </span>
             <input type="number" min="1" max="100" value="1" />
