--- a/components/Pages/home.html
+++ b/components/Pages/home.html
@@ -71,9 +71,9 @@
       <div class="container">
         <div class="md text-center my-2">Shop by our sections</div>
         <div class="container flex">
-          <a href="aisles/meat.html">
+          <a href="aisles/meatAndFish.html">
             <div class="card btn">
-              <h4>Meat</h4>
+              <h4>Meat and Fish</h4>
               <i class="fas fa-drumstick-bite"></i>
             </div>
           </a>
@@ -100,10 +100,10 @@
             </div>
           </a>
 
-          <a href="aisles/fish.html">
+          <a href="aisles/pastryAndBakery.html">
             <div class="card btn">
-              <h4>Fish</h4>
-              <i class="fas fa-fish"></i>
+              <h4>Pastry</h4>
+              <i class="fas fa-cookie"></i>
             </div>
           </a>
 
