--- a/components/Pages/aisles/Snacks.html
+++ b/components/Pages/aisles/Snacks.html
@@ -24,12 +24,17 @@
         <h1 class="logo">Al-Sham</h1>
         <nav>
           <ul>
-            <li><a href="home.html">Home</a></li>
-            <li><a href="aisles/aisles.html">Aisles</a></li>
-            <li><a href="login.html">Login</a></li>
-            <li><a href="createAccount.html">Create Account</a></li>
-            <li><a href="admin.html">Admin</a></li>
-            <li><a href="cart.html">Cart</a></li>
+            <li><a href="/components/Pages/home.html">Home</a></li>
+            <li>
+              <a href="/components/Pages/aisles/aisles.html">Aisles</a>
+            </li>
+
+            <li><a href="/components/Pages/login.html">User login</a></li>
+            <li><a href="/components/Pages/admin.html">Admin</a></li>
+            <li>
+              <a href="/components/Pages/createAccount.html">Create account</a>
+            </li>
+            <li><a href="/components/Pages/cart.html">Cart</a></li>
           </ul>
         </nav>
       </div>
@@ -50,7 +55,11 @@
           />
           <h3>Doritos Nachos Cheese</h3>
           <div class="price">$0.99 <span>tax not included</span></div>
-          <li>Doritos Nacho Cheese Tortilla- Flavoury cheese nachos (235g)</li>
+          <details>
+            <li>
+              Doritos Nacho Cheese Tortilla- Flavoury cheese nachos (235g)
+            </li>
+          </details>
           <div class="quantity">
             <span>Quantity: </span>
             <input type="number" min="1" max="100" value="1" />
@@ -66,7 +75,9 @@
           />
           <h3>Lays Classis</h3>
           <div class="price">$0.99 <span>tax not included</span></div>
-          <li>Lay's Classic Potato Chips - Classic Lays Chips (235g)</li>
+          <details>
+            <li>Lay's Classic Potato Chips - Classic Lays Chips (235g)</li>
+          </details>
           <div class="quantity">
             <span>Quantity: </span>
             <input type="number" min="1" max="100" value="1" />
@@ -82,6 +93,9 @@
           />
           <h3>Flaming Hot Cheetos</h3>
           <div class="price">$0.99 <span>tax not included</span></div>
+          <details>
+            <li>Flaming Hot Cheetos - Flaming Hot Cheetos (535g)</li>
+          </details>
           <div class="quantity">
             <span>Quantity: </span>
             <input type="number" min="1" max="100" value="1" />
@@ -94,7 +108,9 @@
           <img src="../../../images/snackImages/kitkat.png" alt="Kitkat" />
           <h3>Kitkat</h3>
           <div class="price">$0.99 <span>tax not included</span></div>
-          <li>Kitkat 4-Finger Milk Chocolate Bar (45g)</li>
+          <details>
+            <li>Kitkat 4-Finger Milk Chocolate Bar (45g)</li>
+          </details>
           <div class="quantity">
             <span>Quantity: </span>
             <input type="number" min="1" max="100" value="1" />
@@ -107,7 +123,9 @@
           <img src="../../../images/snackImages/aero.jpeg" alt="Aero" />
           <h3>Aero</h3>
           <div class="price">$0.99 <span>tax not included</span></div>
-          <li>Aero Milk chocolate Candy Bar (42g)</li>
+          <details>
+            <li>Aero Milk chocolate Candy Bar (42g)</li>
+          </details>
           <div class="quantity">
             <span>Quantity: </span>
             <input type="number" min="1" max="100" value="1" />
@@ -122,7 +140,9 @@
           />
           <h3>Snickers</h3>
           <div class="price">$0.99 <span>tax not included</span></div>
-          <li>Snickers Chocolate Candy Bar (57g)</li>
+          <details>
+            <li>Snickers Chocolate Candy Bar (57g)</li>
+          </details>
           <div class="quantity">
             <span>Quantity: </span>
             <input type="number" min="1" max="100" value="1" />
