--- a/components/Pages/aisles/meatAndFish.html
+++ b/components/Pages/aisles/meatAndFish.html
@@ -21,15 +21,20 @@
     <!--Navbar-->
     <div class="navbar">
       <div class="container flex">
-        <h1 class="logo">Grocery Store</h1>
+        <h1 class="logo">Al-Sham</h1>
         <nav>
           <ul>
-            <li><a href="home.html">Home</a></li>
-            <li><a href="aisles/aisles.html">Aisles</a></li>
-            <li><a href="login.html">User login</a></li>
-            <li><a href="productDescription.html">Product Description</a></li>
-            <li><a href="createAccount.html">Create account</a></li>
-            <li><a href="cart.html">Cart</a></li>
+            <li><a href="/components/Pages/home.html">Home</a></li>
+            <li>
+              <a href="/components/Pages/aisles/aisles.html">Aisles</a>
+            </li>
+
+            <li><a href="/components/Pages/login.html">User login</a></li>
+            <li><a href="/components/Pages/admin.html">Admin</a></li>
+            <li>
+              <a href="/components/Pages/createAccount.html">Create account</a>
+            </li>
+            <li><a href="/components/Pages/cart.html">Cart</a></li>
           </ul>
         </nav>
       </div>
