--- a/components/Pages/aisles/fruitsAndVegetables.html
+++ b/components/Pages/aisles/fruitsAndVegetables.html
@@ -110,6 +110,7 @@
             <span>Quantity: </span>
             <input type="number" min="1" max="100" value="1" />
             <span>/pounds</span>
+            <p>Leena</p>
           </div>
           <a href="#" class="btn">add to cart</a>
         </div>
