--- a/components/Pages/aisles/fruitsAndVegetables.html
+++ b/components/Pages/aisles/fruitsAndVegetables.html
@@ -1,1 +1,144 @@
-test
+<!doctype html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <link rel="stylesheet" href="../../../css/index.css">
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
+          integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
+          crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Grocery Store </title>
+</head>
+<body>
+<!--Navbar-->
+<div class="navbar">
+    <div class="container flex">
+        <h1 class="logo">Grocery Store</h1>
+        <nav>
+            <ul>
+                <li><a href="home.html">Home</a></li>
+                <li><a href="aisles/aisles.html">Aisles</a></li>
+                <li><a href="login.html">User login</a></li>
+                <li><a href="productDescription.html">Product Description</a></li>
+                <li><a href="createAccount.html">Create account</a></li>
+                <li><a href="cart.html">Cart</a></li>
+            </ul>
+
+        </nav>
+    </div>
+</div>
+
+
+<!--ShowCase-->
+    <section>
+        <div class="md text-center my-2">
+            Fruits and Vegetables
+        </div>
+        </section>
+
+
+
+<section class="product my-2 py-2">
+    <h1 class="heading"> Our latest Fruits and Vegetables </h1>
+    <div class="box-container my-2 py-2">
+       <div class="box">
+           <img src="../../../images/banana.jpg" alt="Bananas">
+           <h3>Bananas</h3>
+           <div class="price">$0.99 <span>tax not included</span></div>
+           <div class="quantity">
+               <span>Quantity: </span>
+               <input type="number" min="1" max="100" value="1">
+               <span>/pounds</span>
+           </div>
+           <a href="#" class="btn">add to cart</a>
+       </div>
+<!--TOMATOES-->
+        <div class="box">
+            <img src="../../../images/mango.jpg" alt="Mango">
+            <h3>Mango</h3>
+            <div class="price">$0.99 <span>tax not included</span></div>
+            <div class="quantity">
+                <span>Quantity: </span>
+                <input type="number" min="1" max="100" value="1">
+                <span>/pounds</span>
+            </div>
+            <a href="#" class="btn">add to cart</a>
+        </div>
+
+        <div class="box">
+            <img src="../../../images/orange.jpg" alt="Orange">
+            <h3>Orange</h3>
+            <div class="price">$0.99 <span>tax not included</span></div>
+            <div class="quantity">
+                <span>Quantity: </span>
+                <input type="number" min="1" max="100" value="1">
+                <span>/pounds</span>
+            </div>
+            <a href="#" class="btn">add to cart</a>
+        </div>
+
+        <div class="box">
+            <img src="../../../images/cucumber.jpg" alt="Cucumber">
+            <h3>Cucumber</h3>
+            <div class="price">$0.99 <span>tax not included</span></div>
+            <div class="quantity">
+                <span>Quantity: </span>
+                <input type="number" min="1" max="100" value="1">
+                <span>/pounds</span>
+            </div>
+            <a href="#" class="btn">add to cart</a>
+        </div>
+
+        <div class="box">
+            <img src="../../../images/tomatoe.jpg" alt="Tomatoes">
+            <h3>Tomatoes</h3>
+            <div class="price">$0.99 <span>tax not included</span></div>
+            <div class="quantity">
+                <span>Quantity: </span>
+                <input type="number" min="1" max="100" value="1">
+                <span>/pounds</span>
+            </div>
+            <a href="#" class="btn">add to cart</a>
+        </div>
+        <div class="box">
+            <img src="../../../images/onions.jpg" alt="Onions">
+            <h3>Onions</h3>
+            <div class="price">$0.99 <span>tax not included</span></div>
+            <div class="quantity">
+                <span>Quantity: </span>
+                <input type="number" min="1" max="100" value="1">
+                <span>/pounds</span>
+            </div>
+            <a href="#" class="btn">add to cart</a>
+        </div>
+    </div>
+</section>
+
+
+<!--   FOOTER     -->
+<footer class="footer bg-dark py-5">
+    <div class="container grid grid-3">
+        <div>
+            <h1>Grocery store</h1>
+            <p>Copyright &copy; 2021</p>
+        </div>
+        <nav>
+            <ul>
+                <li><a href="home.html"></a>Home</li>
+                <li><a href="login.html"></a>Login</li>
+                <li><a href="createAccount.html"></a>Create Account</li>
+            </ul>
+        </nav>
+        <div class="social">
+            <a href="#"><i class="fab fa-twitter fa-2x"></i></a>
+            <a href="#"><i class="fab fa-facebook fa-2x"></i></a>
+            <a href="#"><i class="fab fa-instagram fa-2x"></i></a>
+        </div>
+    </div>
+</footer>
+
+</body>
+</html>
