--- a/components/beverages2.html
+++ b/components/beverages2.html
@@ -1,93 +1,145 @@
+<!doctype html>
 <html lang="en">
 <head>
-   <meta charset="UTF-8">
-   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="beveragescss.css">
-   <title>Aisle options</title>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <link rel="stylesheet" href="../../../css/index.css">
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
+          integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
+          crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Grocery Store </title>
 </head>
 <body>
-<h1 class="bev"><u>beverages</h1></u>
-   <div class="column">
-      <div class="row"
-       > <img src="images2/ginger ale.jpg" alt="Ginger ale"> 
-<h4>Ginger Ale</h4>
-   <details><summary>Description</summary>
-<li>Ginger ale is made from actual Ginger</li>
-<li>its main brands are Schweppes and Canada Dry</li>
-<button>add to cart</button>
-</details>
-</div>
-</div>
+<!--Navbar-->
+<div class="navbar">
+    <div class="container flex">
+        <h1 class="logo">Grocery Store</h1>
+        <nav>
+            <ul>
+                <li><a href="home.html">Home</a></li>
+                <li><a href="aisles/aisles.html">Aisles</a></li>
+                <li><a href="login.html">User login</a></li>
+                <li><a href="productDescription.html">Product Description</a></li>
+                <li><a href="createAccount.html">Create account</a></li>
+                <li><a href="cart.html">Cart</a></li>
+            </ul>
 
-<div class="column">
-   <div class="row">
-     <img src="images2/tea.jpg" alt="Ginger ale"> 
-<h4>Tea</h4>
-   <details><summary>Description</summary>
-<li>Tea is one of the most popular drinks</li>
-<li>there are many types of teas:green tea,early gray</li>
-<button>add to cart</button>
-</details>
-</div>
-</div>
-
-<div class="column">
-   <div class="row">
-     <img src="images2/cola.jpg" alt="Ginger ale"> 
-<h4>cola</h4>
-   <details><summary>Description</summary>
-<li>cola is the most popular soft drink in the grocery aisle</li>
-<li>its two popular brands are Coca-Cola and pepsi </li>
-<button>add to cart</button>
-</details>
-</div>
-</div>
-
-<div class="column">
-   <div class="row">
-     <img src="images2/pexels-chevanon-photography-302899.jpg" alt="Ginger ale"> 
-<h4>Coffee</h4>
-   <details><summary>Description</summary>
-<li>coffee is a very popular drink made from coffee beans </li>
-<li>there are many types of coffee's</li>
-<li>expresso,latte,ameircano,capacciuno</li>
-<button>add to cart</button>
-</details>
-</div>
-</div>
-
-<div class="column">
-   <div class="row">
-     <img src="images2/pexels-timur-weber-8679183.jpg" alt="Ginger ale"> 
-<h4>Watermelon juice</h4>
-   <details><summary>Description</summary>
-<li>watermelon juice is made from watermelon </li>
-<li>its fresh and natural no added sugar</li>
-<button>add to cart</button>
-</details>
-</div>
-</div>
-
-<div class="column">
-   <div class="row">
-     <img src="images2/pexels-photomix-company-96974.jpg" alt="Ginger ale"> 
-<h4>lemonade</h4>
-   <details><summary>Description</summary>
-<li>lemonade is from actual lemonds</li>
-<li>lemoande is fresh and natural and naturally squeezed </li>
-<button>add to cart</button>
-</details>
-</div>
+        </nav>
+    </div>
 </div>
 
 
+<!--ShowCase-->
+    <section>
+        <div class="md text-center my-2">
+            Beverages
+        </div>
+        </section>
 
 
+
+<section class="product my-2 py-2">
+    <h1 class="heading"> Our latest Beverages </h1>
+    <div class="box-container my-2 py-2">
+       <div class="box">
+           <img src="images2/ginger ale.jpg" alt="GA">
+           <h3>Ginger ale</h3>
+           <div class="price">$2.99 <span>tax not included</span></div>
+           <div class="quantity">
+               <span>Quantity: </span>
+               <input type="number" min="1" max="100" value="1">
+               <span>/amount</span>
+           </div>
+           <a href="#" class="btn">add to cart</a>
+       </div>
+<!--TOMATOES-->
+        <div class="box">
+            <img src="images2/cola.jpg" alt="cola">
+            <h3>Cola</h3>
+            <div class="price">$1.99 <span>tax not included</span></div>
+            <div class="quantity">
+                <span>Quantity: </span>
+                <input type="number" min="1" max="100" value="1">
+                <span>/amount</span>
+            </div>
+            <a href="#" class="btn">add to cart</a>
+        </div>
+
+        <div class="box">
+            <img src="images2/tea.jpg" alt="tea">
+            <h3>Tea</h3>
+            <div class="price">$5<span>tax not included</span></div>
+            <div class="quantity">
+                <span>Quantity: </span>
+                <input type="number" min="1" max="100" value="1">
+                <span>/box</span>
+            </div>
+            <a href="#" class="btn">add to cart</a>
+        </div>
+
+        <div class="box">
+            <img src="images2/pexels-chevanon-photography-302899.jpg"alt="Coffee">
+            <h3>Coffee</h3>
+            <div class="price">$0.99 <span>tax not included</span></div>
+            <div class="quantity">
+                <span>Quantity: </span>
+                <input type="number" min="1" max="100" value="1">
+                <span>/pounds per bean </span>
+            </div>
+            <a href="#" class="btn">add to cart</a>
+        </div>
+
+        <div class="box">
+            <img src="images2/pexels-timur-weber-8679183.jpg" alt="Tomatoes">
+            <h3>Watermelon juice</h3>
+            <div class="price">$3 <span>tax not included</span></div>
+            <div class="quantity">
+                <span>Quantity: </span>
+                <input type="number" min="1" max="100" value="1">
+                <span>/pounds</span>
+            </div>
+            <a href="#" class="btn">add to cart</a>
+        </div>
+        <div class="box">
+            <img src="images2/soda water.jpg" alt="Soda water">
+            <h3>Soda water</h3>
+            <div class="price">$1.99 <span>tax not included</span></div>
+            <div class="quantity">
+                <span>Quantity: </span>
+                <input type="number" min="1" max="100" value="1">
+                <span>/pounds</span>
+            </div>
+            <a href="#" class="btn">add to cart</a>
+        </div>
+    </div>
+</section>
+
+
+<!--   FOOTER     -->
+<footer class="footer bg-dark py-5">
+    <div class="container grid grid-3">
+        <div>
+            <h1>Grocery store</h1>
+            <p>Copyright &copy; 2021</p>
+        </div>
+        <nav>
+            <ul>
+                <li><a href="home.html"></a>Home</li>
+                <li><a href="login.html"></a>Login</li>
+                <li><a href="createAccount.html"></a>Create Account</li>
+            </ul>
+        </nav>
+        <div class="social">
+            <a href="#"><i class="fab fa-twitter fa-2x"></i></a>
+            <a href="#"><i class="fab fa-facebook fa-2x"></i></a>
+            <a href="#"><i class="fab fa-instagram fa-2x"></i></a>
+        </div>
+    </div>
+</footer>
+
+<script src="button.js"></script>
 </body>
-
-
-
-
- 
-            </html>
+</html>
