--- a/components/beveragescss.css
+++ b/components/beveragescss.css
@@ -12,9 +12,6 @@ body{
         width: 200px;
     }
     
-    *{
-       box-sizing: border-box;
-    }
     
     .column{
     float: left;
@@ -26,4 +23,257 @@ body{
     display: table;
     clear: both;
     }
+    :root{
+        --primary-color:deepskyblue;
+    }
+    *{
+        box-sizing: border-box;
+        padding: 0;
+        margin: 0;
+    }
     
+    body{
+        font-family: 'Lato', sans-serif;
+        color: #333;
+        line-height: 1.6;
+    }
+    
+    ul{
+        list-style-type: none;
+    }
+    
+    a{
+        text-decoration: none;
+        color: black;
+    }
+    
+    h1,h2{
+        font-weight: 300 ;
+        line-height: 1.2;
+        margin: 10px 0;
+    }
+    
+    p{
+        margin: 10px 0;
+    
+    }
+    img{
+        width: 100%;
+    }
+    /*Navbar styling*/
+    .navbar{
+        background-color: var(--primary-color);
+        color: white;
+        height: 70px;
+    }
+    .navbar ul{
+        display: flex;
+    }
+    .navbar a{
+        color: #ffff;
+        padding: 10px;
+        margin: 0 5px;
+    }
+    
+    .navbar a:hover{
+        border-bottom: 2px #fff solid;
+    }
+    .navbar .flex{
+        justify-content: space-between;
+    }
+    
+    /*ShowCase*/
+    .showcase{
+        height: 400px;
+        background-color: var(--primary-color) ;
+        color: white;
+        position: relative;
+    }
+    .showcase h1{
+        font-size: 40px;
+    }
+    .showcase p{
+        margin: 20px 0;
+    }
+    .showcase.grid{
+        overflow: visible;
+        grid-template-columns: 55%  45%;
+        gap:30px;
+    
+    }
+    .showcase-form{
+        position: relative;
+        top: 60px;
+        height: 350px;
+        width: 400px;
+        padding: 40px;
+        z-index: 100;
+        justify-self: flex-end;
+    }
+    
+    .showcase-form .form-control{
+        margin: 30px 0;
+    }
+    .showcase-form input[type='text'],
+    .showcase-form input[type='email']{
+        border: 0;
+        border-bottom: 1px solid #b4becb;
+        width: 100%;
+        padding: 3px;
+        font-size: 16px;
+    }
+    
+    .showcase-form input:focus{
+        outline: none;
+    }
+    
+    .showcase::before,
+    .showcase::after{
+        content:' ';
+        position: absolute;
+        height: 100px;
+        bottom: -70px;
+        right: 0;
+        left: 0;
+    /*    the slant */
+        background-color: red;
+        transform: skewY(-3deg);
+        -webkit-transform: skewY(-3deg);
+        -moz-transform: skewY(-3deg);
+        -ms-transform: skewY(-3deg);
+    }
+    /*Category*/
+    .category{
+        padding-top: 100px;
+    }
+    .category-heading{
+        max-width: 500px;
+        margin: auto;
+    }
+    .category .grid p{
+        font-size: 20px;
+        font-weight: bold;
+    }
+    /*Utilities --> Used all over the website*/
+    .container{
+        max-width: 1100px;
+        margin: 0 auto;
+        overflow: auto;
+        padding: 0 40px;
+    }
+    .card{
+        background-color: white;
+        color: #333;
+        border-radius: 10px;
+        box-shadow: 0 3px 10px rgba(0,0,0,0.2);
+        padding: 20px;
+        margin: 10px;
+    }
+    .btn{
+        display: inline-block;
+        padding: 10px 30px;
+        cursor: pointer;
+        background-color: var(--primary-color);
+        color: white;
+        border: none;
+        border-radius: 5px;
+    }
+    .btn-outline {
+      background-color: transparent;
+      border: 1px white solid;
+    }
+    .text-center{
+        text-align: center;
+    }
+    .btn:hover{
+        transform: scale(0.98);
+    }
+    .flex{
+        display: flex;
+        /*between the flex item*/
+        justify-content: space-between;
+        align-items: center;
+        height: 100%;
+    }
+    /*Define how wide they get*/
+    /*fr = fraction*/
+    .grid{
+        display: grid;
+        grid-template-columns: 2fr 1fr;
+        gap: 20px;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
+    }
+    /*Will put 3 grids for the moment can add more later*/
+    .grid-3{
+        grid-template-columns: repeat(3,1fr);
+    }
+    
+    /*Margin*/
+    .my-1{
+        /*Multiplier of the html font size */
+        margin: 1rem 0;
+    }
+    .my-2{
+        margin: 1.5rem 0;
+    }
+    .my-3{
+        margin: 2rem 0;
+    }
+    .my-4{
+        margin: 3rem 0;
+    }
+    .my-5{
+        margin: 4rem 0;
+    }
+    .py-1{
+        /*Multiplier of the html font size */
+        margin: 1rem;
+    }
+    .m-2{
+        margin: 1.5rem;
+    }
+    .m-3{
+        margin: 2rem;
+    }
+    .m-4{
+        margin: 3rem;
+    }
+    .m-5{
+        margin: 4rem;
+    }
+    
+    /*Padding*/
+    .py-1{
+        /*Multiplier of the html font size */
+        padding: 1rem 0;
+    }
+    .py-2{
+        padding: 1.5rem 0;
+    }
+    .py-3{
+        padding: 2rem 0;
+    }
+    .py-4{
+        padding: 3rem 0;
+    }
+    .py-55{
+        padding: 4rem 0;
+    }
+    .p-1{
+        /*Multiplier of the html font size */
+        padding: 1rem;
+    }
+    .p-2{
+        padding: 1.5rem;
+    }
+    .p-3{
+        padding: 2rem;
+    }
+    .p-4{
+        padding: 3rem;
+    }
+    .p-55{
+        padding: 4rem;
+    }
