--- a/css/index.css
+++ b/css/index.css
@@ -255,3 +255,24 @@ img{
 .p-55{
     padding: 4rem;
 }
+.bev {
+    text-align: center;
+    font-size: 40px;
+}
+
+img{
+    height: 200px;
+    width: 200px;
+}
+
+
+.column{
+float: left;
+width: 33.33%;
+padding: 5px;
+}
+.row:after{
+content: "";
+display: table;
+clear: both;
+}
