--- a/components/Pages/aisles/Snacks.html
+++ b/components/Pages/aisles/Snacks.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+  <script src="./../../../javascript/cart.js"></script>
+  <script src="./../../../javascript/addToCart.js"></script>
+
   <head>
     <meta charset="UTF-8" />
     <meta
