Strawberry typo mistake

--- a/components/Pages/aisles/strawberryCake_P3.html
+++ b/components/Pages/aisles/strawberryCake_P3.html
@@ -100,7 +100,7 @@
   
 <div class="right">
 	<div class="product-description">
-  	<h1>Strawbeery Cake</h1>
+  	<h1>Strawberry Cake</h1>
   	<p class="price">$4.99</p>
  	 <p>Super delicious, thick Strawberry</p>
       <span>Quantity: </span>
