fruits, meat, pastry, snacks p3s done

--- a/components/Pages/aisles/fruitsAndVegetables.html
+++ b/components/Pages/aisles/fruitsAndVegetables.html
@@ -50,7 +50,9 @@
       <div class="box-container my-2 py-2">
         <div class="box">
           <img src="../../../images/banana.jpg" alt="Bananas" />
-          <h3>Bananas</h3>
+          <a href="bananas_P3.html">
+            <h3>Bananas</h3>
+        </a>
           <div class="price">$0.99 <span>tax not included</span></div>
           <div class="quantity">
             <span>Quantity: </span>
@@ -62,7 +64,9 @@
         <!--TOMATOES-->
         <div class="box">
           <img src="../../../images/mango.jpg" alt="Mango" />
-          <h3>Mango</h3>
+          <a href="mango_P3.html">
+            <h3>Mango</h3>
+        </a>
           <div class="price">$0.99 <span>tax not included</span></div>
           <div class="quantity">
             <span>Quantity: </span>
@@ -74,7 +78,9 @@
 
         <div class="box">
           <img src="../../../images/orange.jpg" alt="Orange" />
-          <h3>Orange</h3>
+          <a href="orange_P3.html">
+            <h3>Orange</h3>
+        </a>
           <div class="price">$0.99 <span>tax not included</span></div>
           <div class="quantity">
             <span>Quantity: </span>
@@ -86,7 +92,9 @@
 
         <div class="box">
           <img src="../../../images/cucumber.jpg" alt="Cucumber" />
-          <h3>Cucumber</h3>
+          <a href="cucumber_P3.html">
+            <h3>Cucumber</h3>
+        </a>
           <div class="price">$0.99 <span>tax not included</span></div>
           <div class="quantity">
             <span>Quantity: </span>
@@ -98,7 +106,11 @@
 
         <div class="box">
           <img src="../../../images/tomatoe.jpg" alt="Tomatoes" />
-          <h3>Tomatoes</h3>
+          <a href="tomatoes_P3.html">
+            
+            <h3>Tomatoes</h3>
+
+        </a>
           <div class="price">$0.99 <span>tax not included</span></div>
           <div class="quantity">
             <span>Quantity: </span>
@@ -109,7 +121,9 @@
         </div>
         <div class="box">
           <img src="../../../images/onions.jpg" alt="Onions" />
-          <h3>Onions</h3>
+          <a href="onions_P3.html">
+            <h3>Onions</h3>
+        </a>
           <div class="price">$0.99 <span>tax not included</span></div>
           <div class="quantity">
             <span>Quantity: </span>
