--- a/components/Pages/aisles/meatAndFish.html
+++ b/components/Pages/aisles/meatAndFish.html
@@ -50,7 +50,20 @@
       <div class="box-container my-2 py-2">
         <div class="box">
           <img src="new images 2/ground_beef.jpeg" alt="Ground Beef" />
-          <h3>Ground Beef</h3>
+        
+
+          <a href="groundBeef_P3.html">
+            
+              <h3>Ground Beef</h3>
+              
+            
+          </a>
+
+
+
+
+
+
           <div class="price">$4.25 <span>tax not included</span></div>
           <div class="quantity">
             <span>Quantity: </span>
@@ -62,7 +75,11 @@
         <!--TOMATOES-->
         <div class="box">
           <img src="new images 2/raw steak.jpeg" alt="steak" />
-          <h3>Steak</h3>
+          
+          <a href="steak_P3.html">           
+            <h3>Steak</h3>                      
+        </a>
+
           <div class="price">$7.89 <span>tax not included</span></div>
           <div class="quantity">
             <span>Quantity: </span>
@@ -74,7 +91,10 @@
 
         <div class="box">
           <img src="new images 2/chicken.jpeg" alt="chicken Breast" />
-          <h3>Chicken Breast</h3>
+
+          <a href="chicken_P3.html">            
+            <h3>Chicken Breast</h3>                      
+        </a>
           <div class="price">$13.00 <span>tax not included</span></div>
           <div class="quantity">
             <span>Quantity: </span>
@@ -86,7 +106,9 @@
 
         <div class="box">
           <img src="new images 2/salmon.jpeg" alt="Salmon" />
-          <h3>Salmon</h3>
+          <a href="salmon_P3.html"> 
+            <h3>Salmon</h3>          
+        </a>
           <div class="price">$9.99 <span>tax not included</span></div>
           <div class="quantity">
             <span>Quantity: </span>
@@ -98,7 +120,9 @@
 
         <div class="box">
           <img src="new images 2/tuna.jpeg" alt="Tuna Fish" />
-          <h3>Tuna Fish</h3>
+          <a href="tunaFish_P3.html">
+            <h3>Tuna Fish</h3>
+        </a>
           <div class="price">$6.99 <span>tax not included</span></div>
           <div class="quantity">
             <span>Quantity: </span>
@@ -109,7 +133,9 @@
         </div>
         <div class="box">
           <img src="new images 2/shrimp.jpeg" alt="Shrimp" />
-          <h3>Shrimp</h3>
+          <a href="shrimp_P3.html">
+            <h3>Shrimp</h3>
+        </a>
           <div class="price">$9.99 <span>tax not included</span></div>
           <div class="quantity">
             <span>Quantity: </span>
