--- a/components/Pages/aisles/pastryAndBakery.html
+++ b/components/Pages/aisles/pastryAndBakery.html
@@ -50,7 +50,9 @@
       <div class="box-container my-2 py-2">
         <div class="box">
           <img src="../../../images/pastryImages/tirmasu.jpg" alt="tirmasu " />
-          <h3>Tirmasu Cake</h3>
+          <a href="trimasu_P3.html">
+            <h3>tiramisu</h3>
+        </a>
           <div class="price">$0.99 <span>tax not included</span></div>
           <details>
             <li>Tiramisu is an elegant and rich layered Italian dessert</li>
@@ -72,7 +74,9 @@
             src="../../../images/pastryImages/smallchocolate.jpg"
             alt="Small Chocolate Cake"
           />
-          <h3>Chocolate Mini Cakes</h3>
+          <a href="chocolatMiniCake_P3.html">
+            <h3>Small Chocolate Cake</h3>
+        </a>
           <div class="price">$1.99 <span>tax not included</span></div>
           <details>
             <li>Super delicious, thick, delicious</li>
@@ -94,7 +98,9 @@
             src="../../../images/pastryImages/cheescake.jpg"
             alt="Strawberry Cake"
           />
-          <h3>Strawberry Cake</h3>
+          <a href="strawberryCake_P3.html">
+            <h3>Strawbery Cake</h3>
+        </a>
           <div class="price">$4.99 <span>tax not included</span></div>
           <details>
             <li>Super delicious, thick Strawberry</li>
@@ -116,7 +122,9 @@
             src="new images 2/chocolate _chip_cookie.jpeg"
             alt="chocolate chip cookiesr"
           />
-          <h3>Chocolate Chip Cookie</h3>
+          <a href="chocolatChipCookie_P3.html">
+            <h3>Chocolate Chip Cookie</h3>
+        </a>
           <div class="price">$0.99 <span>tax not included</span></div>
           <details>
             <li>Super delicious chocolate cookie</li>
@@ -133,7 +141,9 @@
 
         <div class="box">
           <img src="new images 2/chocolate_cake.jpeg" alt="CHOCOLATE CAKE" />
-          <h3>Chocolate Cake with Chocolate Icing</h3>
+          <a href="chocolatCakeWithIcing_P3.html">
+            <h3>Chocolate Cake with Chocolate Icing</h3>
+        </a>
           <div class="price">$5.99 <span>tax not included</span></div>
           <details>
             <li>Super delicious chocolate chocolate</li>
@@ -149,7 +159,9 @@
         </div>
         <div class="box">
           <img src="new images 2/croissant.jpeg" alt="CROISSANT" />
-          <h3>Croissant</h3>
+          <a href="croissant_P3.html">
+            <h3>Croissant</h3>
+        </a>
           <div class="price">$3.99 <span>tax not included</span></div>
           <details>
             <li>Super delicious oven baked Croissant</li>
