--- a/components/Pages/aisles/fruitsAndVegetables.html
+++ b/components/Pages/aisles/fruitsAndVegetables.html
@@ -14,6 +14,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <script src="store.js" async></script>
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Al-Sham</title>
   </head>
@@ -50,14 +51,20 @@
       <div class="box-container my-2 py-2">
         <div class="box">
           <img src="../../../images/banana.jpg" alt="Bananas" />
-          <h3>Bananas</h3>
-          <div class="price">$0.99 <span>tax not included</span></div>
+          <h3 id="title">Bananas</h3>
+          <div id="price" class="price">
+            $0.99 <span>tax not included</span>
+          </div>
           <div class="quantity">
             <span>Quantity: </span>
-            <input type="number" min="1" max="100" value="1" />
+            <input id="cartCount" type="number" min="1" max="100" value="1" />
             <span>/pounds</span>
           </div>
-          <a href="#" class="btn">add to cart</a>
+          <button class="btn-outline">
+            <a href="../cart.html" id="addToCartButton" class="btn">
+              add to cart</a
+            >
+          </button>
         </div>
         <!--TOMATOES-->
         <div class="box">
