--- a/components/Pages/home.html
+++ b/components/Pages/home.html
@@ -14,6 +14,8 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <script type="text/javascript" src="../../javascript/addToCart.js"></script>
+    <script type="text/javascript" src="../../javascript/cart.js"></script>
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Al-Sham</title>
   </head>
